# rtfm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  config.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  update-chromadb-bin.yml
contrib/arch/: python-agent-rtfm.install  rtfm-restart.hook  rtfm-update.service  rtfm.service
issues/: 01-parser-pro-doc-system-plan.md  01-parser-pro-doc-system.md  02-import-health-score.md  03-cli-simplify-agent-first.md
src/rtfm/: cli.py  health.py  models.py  reporter.py  search.py  server.py  storage.py
src/rtfm/ingest/: detect.py  downloaders.py  embedder.py  extractor.py  parser.py  pipeline.py
src/rtfm/ingest/extractors/: __init__.py  base.py  generic.py  mkdocs.py  rustdoc.py  sphinx.py  typedoc.py
src/rtfm/ingest/parsers/: __init__.py  base.py  generic_md.py  mkdocs_md.py  rustdoc_html.py  sphinx_rst.py  typedoc_html.py
src/rtfm/ingest/sources/: __init__.py  base.py  github.py  llms_txt.py  local.py  website.py
tests/: test_detect.py  test_extractor.py  test_extractors.py  test_health.py  test_models.py  test_parser.py  test_reporter.py  test_search.py  test_server.py
tests/fixtures/: sample_fastapi.md  sample_svelte.md
